# clawmux

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
.kiro/settings/: lsp.json
docs/: acp-research.md  design.md  implementation.md  requirements.md  research.md
docs/tasks/: 1.2.md  2.1.md  tasks.md
src/: app.rs  error.rs  main.rs  messages.rs  notifications.rs
src/backend/: mod.rs  opencode.rs
src/backend/kiro/: events.rs  mod.rs  process.rs  transport.rs  types.rs
src/config/: init.rs  mod.rs  providers.rs
src/config/agents/: code-quality.md  code-review.md  design.md  implementation.md  intake.md  planning.md  research-act.md  research-plan.md  security-review.md
src/config/tasks/: 1.1.md
src/opencode/: events.rs  mod.rs  server.rs  session.rs  types.rs
src/tasks/: mod.rs  models.rs  parser.rs  writer.rs
src/tui/: layout.rs  markdown.rs  mod.rs  task_list.rs
src/tui/tabs/: agent_activity.rs  code_review.rs  design.rs  mod.rs  plan.rs  questions.rs  research.rs  review.rs  task_details.rs  team_status.rs
src/workflow/: agents.rs  mod.rs  prompt_composer.rs  response_parser.rs  transitions.rs
tasks/: 1.1.md  1.2.md  1.3.md  1.4.md  10.1.md  10.2.md  10.3.md  11.1.md  11.2.md  2.1.md  2.2.md  2.3.md  3.1.md  3.2.md  4.1.md  4.2.md  4.3.md  5.1.md  5.2.md  5.3.md  5.4.md  6.1.md  6.2.md  7.1.md  7.2.md  8.1.md  8.2.md  8.3.md  9.1.md
